fix alignment position()

--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ body {
   line-height: 150%;
 }
 
-.attribution { 
+/* .attribution { 
   font-size: 11px; 
   text-align: center; 
   margin-top: 10rem;
@@ -115,4 +115,4 @@ body {
     
 .attribution a {
    color: hsl(228, 45%, 44%); 
-  }
+  } */
